toka/app/webapp/assets/css/toka.css
/* ... */
.chatroom-heading .title-menu .users {
    float: left;
    overflow: hidden;
    height: 15px;
    margin-right: 20px;
}
    .chatroom-heading .title-menu .users img {
        float: left;
        height: 15px;
        width: 15px;
        margin-right: 5px;
    }
    .chatroom-heading .title-menu .users span {
        display: inline-block;
        float: right;
        font-size: 15px;
        line-height: 15px;
    }
.chatroom .user-list {
    display: none;
    position: absolute;
}
    .chatroom .user-list ul {
        background-color: rgba(11,15,18,0.8);
        border-radius: 4px;
        margin: 0px;
        padding: 10px;
    }
        .chatroom .user-list ul li {
            color: #fff;
            margin: 0px;
            padding: 0px;
            list-style: none;
        }
.chatroom .chatroom-body {
    position: relative;
}
.chatroom .chatbox {
    border-bottom: 1px solid #ccc;
    position: relative;
    padding: 0 0px 0 0px;
}
    .chatroom .inputbox {
        position: relative;
        border-radius: 0px;
        z-index: 51;
    }        
        .chatroom .inputbox .upload-img-btn {
            position: absolute;
            right: 14px;
            top: 10px;
            color: #F4A460;
            cursor: pointer;
            font-size: 22px;
            padding: 5px;
            z-index: 10;
        }
        .chatroom .inputbox input[data-cloudinary-field='upload-img'] {
            display: none;
        }
.chatroom .commands-help {
    display: none;
    position: absolute;
    width: 100%;
    z-index: 50;
    background-color: rgba(255,255,255,0.9);
    border-width: 2px 2px 0px 2px;
    border-style: solid;
    border-color: #2e3136;
}
    .chatroom .commands-help ul {
        list-style: none;
        padding: 0;
        margin: 0;
    }
        .chatroom .commands-help li {
            list-style: none;
            padding: 8px 12px 6px 12px;
            border-bottom: 1px solid #ddd;
            cursor: pointer;
            color: #555;
            font-size: 12px;
        }
        .chatroom .commands-help li .command-desc {
            float: right;
        }
        .chatroom .commands-help .commands-top {
            background-color: #2e3136;
            color: #fff;
            padding: 5px;
        }
        .chatroom .commands-help li.selected {
            background-color: rgb(238, 238, 238);
        }
        .chatroom .commands-help li:hover {
            background-color: rgb(238, 238, 238);
        }
    .chatroom .input-msg.commandActive {
        border-color: #2e3136;
        border-style: solid;
        border-width: 0px 2px 2px 2px;
    }
.chatroom .messages-container .welcome-message {
    border-bottom: 1px #eceeef solid;
    color: #949494;
    padding: 40px 20px;
}
.chatroom .messages {
    margin: 10px 0px 0px 0px;
    padding: 0 0 0 0px;
    font-size: 13px;
}
.chatroom .input-msg {
    height: 48px;
    border-radius: 0px;
    padding: 14px;
    padding-right: 40px;
    font-size: 14px;
    border: none;
    border-top: 1px #ddd solid;
    overflow: hidden;
}
.chatroom-message {
    padding-left: 35px;
    margin-bottom: 15px;
    list-style: none;
}
.chatroom-message.full-width {
    margin-left: 10px;
}
    .chatroom-message .image-upload {    
        display: inline-block;
        border: 1px solid #ddd;
        padding: 5px;
        border-radius: 5px;
    }
    .chatroom-message .embed {          
        padding: 5px 0px 5px 10px;
        overflow: hidden;
    }  
    .chatroom-message .embed .desc {
        display: inline-block;        
        border-left: 1px solid #ddd;  
        border-bottom-right-radius: 5px;
        border-top-right-radius: 5px;
        overflow: hidden;
        text-overflow: ellipsis;
        font-size: 11px;
        color: #333;
        background-color: #fff;
    }
    .chatroom-message .youtube.embed {
        border-left: 3px solid #cc181e;  
    }
        .chatroom-message .youtube .preview {
            float: left;
            height: 100px; 
        }
        .chatroom-message .yt-icon {
            height: 15px;
        }
            .chatroom-message .yt-title {
                white-space: nowrap;
                overflow: hidden;
            }
            .chatroom-message .yt-title span {
                position: relative;
                top: 2px;
                margin-left: 5px;
                line-height: 1.2;
            }
        .chatroom-message .yt-video-desc {
            line-height: 1.6;   
        }
         .chatroom-message .youtube .preview img {
            display: inline-block;
            height: 100%;
            border-bottom-left-radius: 5px;
            border-top-left-radius: 5px;
        }
        .chatroom-message .youtube .desc {
            padding: 5px 10px;
            height: 100px;            
            width: 190px;
            max-width: 400px;     
        }
    .chatroom-message .image.embed {
        border-left: 3px solid rgb(255,133,43);
        height: 136px;
    }
        .chatroom-message .image.embed img {
            background-color: #fff;
            height: 100%;
            border-radius: 5px;
        }
    .chatroom-message .link.embed {
        border-left: 3px solid rgb(255,133,43);
        height: 120px;
    }
        .chatroom-message .link .preview {
            float: left;
            height: 110px; 
        }
        .chatroom-message .link .preview img {
            display: inline-block;
            height: 100%;
            border-bottom-left-radius: 5px;
            border-top-left-radius: 5px;
        }
        .chatroom-message .link .desc {
            padding: 10px;
            white-space: nowrap;
            height: 110px;            
            width: 95px;
            max-width: 300px;
        }
.chatroom-message .chat {
    position: relative;
}
/* ... */

